--- a/package.json
+++ b/package.json
@@ -24,20 +24,22 @@
     "compression": "^1.6.2",
     "express": "^4.15.2",
     "immutable": "4.0.0-rc.2",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-actions": "^2.2.1"
+    "redux-actions": "^2.2.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.1.0",
-    "babel-plugin-flow-react-proptypes": "^3.4.0",
+    "babel-plugin-flow-react-proptypes": "^17.1.1",
     "babel-preset-env": "^1.2.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
